# msu_parallel_programming

./: .gitignore  README.md
11_semester/task3/: CMakeLists.txt  Makefile  main.cpp  main_mpi.cpp  out.txt  task3.cpp  utils.py
11_semester/task3/include/: functions.h  grid.h  index.h  saver.h  solver.h  solver_mpi.h  splitter.h
9_semester/task2/: CMakeLists.txt  Makefile  compute_statistics.py  results.txt  results1.txt  task2.cpp
9_semester/task3/: CMakeLists.txt  Makefile  batcher_sort.cpp  data_structures.h  out.txt  task3.cpp  task3_1.cpp  utils.cpp  utils.ipynb  utils.py
9_semester/task3/results/: result_128_16_128_net1.txt  result_128_16_128_net2.txt  result_128_16_256_net1.txt  result_128_16_256_net2.txt  result_128_16_512_net1.txt  result_128_16_512_net2.txt  result_128_31_128_net1.txt  result_128_31_128_net2.txt  result_128_31_256_net1.txt  result_128_31_256_net2.txt  result_128_31_512_net1.txt  result_128_31_512_net2.txt  result_128_64_128_net1.txt  result_128_64_128_net2.txt  result_128_64_256_net1.txt  result_128_64_256_net2.txt  result_128_64_512_net1.txt  result_128_64_512_net2.txt  result_16_16_128_net1.txt  result_16_16_128_net2.txt  result_16_16_256_net1.txt  result_16_16_256_net2.txt  result_16_16_512_net1.txt  result_16_16_512_net2.txt  result_16_31_128_net1.txt  result_16_31_128_net2.txt  result_16_31_256_net1.txt  result_16_31_256_net2.txt  result_16_31_512_net1.txt  result_16_31_512_net2.txt  result_16_64_128_net1.txt  result_16_64_128_net2.txt  result_16_64_256_net1.txt  result_16_64_256_net2.txt  result_16_64_512_net1.txt  (+127 more)
(+27 files in other folders)
